add google analytics

--- a/index.html
+++ b/index.html
@@ -278,5 +278,14 @@
         <a href="https://github.com/kazuhikoarase/qrcode-generator" rel="noopener noreferrer" target="_blank">qrcode-generator</a> &
         <a href="https://forum.awd.ru/gallery/album.php?album_id=69260" rel="noopener noreferrer" target="_blank">Форум Винского</a> 
     </div>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LNYQH97GL3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-LNYQH97GL3');
+    </script>
 </body>
 </html>
